# bassin_seacom

./: .back_conf.service  .send.sh  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: arm_backend.rs  backend.rs  driver_cn_pin.rs  drivers_cn_rs232.rs  error_handler.rs  main.rs  tcp_socket.rs
common/: Cargo.toml
common/src/: definitions.rs  error.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/app/: definitions.rs
modelisation/: Alim_5V.stp  connecteur_DB9.stl
modelisation/boitier/: Boitier.f3d  Boitier.step  couvercle.f3d  couvercle.step
modelisation/carte_PCB/: BB-cape.brd  BB-cape.fbrd  BB-cape.fsch  BB-cape.sch
