[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"

[build.env]
# Needed for libudev to cross-compile properly on ARM systems
# See this details: https://travis-ci.org/ekmecic/libbeaglebone/jobs/252687768#L595
passthrough = ["PKG_CONFIG_ALLOW_CROSS"]
