[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6.1"
log = "0.4.20"
serde_json = "1.0.111"
common = { version = "0.1.0", path = "../common" }
websocket = { version = "0.27.0", default-features = false, features = ["sync", "native-tls"] }

[build.env]
# Needed for libudev to cross-compile properly on ARM systems
# See this details: https://travis-ci.org/ekmecic/libbeaglebone/jobs/252687768#L595
passthrough = ["PKG_CONFIG_ALLOW_CROSS"]
