[package]
name = "backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6.1"
log = "0.4.20"
serde_json = "1.0.149"
common = { version = "0.1.0", path = "../common" }
# i2c-linux = "0.1.2"
linux-embedded-hal = { version = "0.4.1", features = ["gpio_cdev"] }
i2cdev = "0.6.2"
# websocket = { version = "0.27.1", default-features = false, features = ["sync"] }
tungstenite = "0.28.0"
futures = "0.3.30"
async-recursion = "1.0.5"
chrono = "0.4.33"
strum = "0.26.1"

[build.env]
target = "armv7-unknown-linux-musleabihf"
# Needed for libudev to cross-compile properly on ARM systems
# See this details: https://travis-ci.org/ekmecic/libbeaglebone/jobs/252687768#L595
passthrough = ["PKG_CONFIG_ALLOW_CROSS"]
