[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png"] }
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
wasm-bindgen-futures = "0.4.39"
common = { version = "0.1.0", path = "../common" }
egui = "0.24.1"
serde_json = "1.0.111"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-sockets = "1.0.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
