[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
eframe = { version = "0.26.0", features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.26.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png"] }
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
common = { version = "0.1.0", path = "../common" }
egui = "0.26.0"
serde_json = "1.0.111"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-sockets = "1.0.0"
egui-modal = "0.3.1"
rfd = "0.14.0"
futures = "0.3.30"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
