[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = "0.3.85"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
eframe = { version = "0.26.0", features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.26.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png"] }
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
wasm-bindgen = "0.2.111"
wasm-bindgen-futures = "0.4.42"
common = { version = "0.1.0", path = "../common" }
egui = "0.26.0"
serde_json = "1.0.111"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-sockets = "1.0.0"
egui-modal = "0.3.1"
rfd = "0.14.0"
futures = "0.3.30"
